compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_constant.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

const value = 25

const my_constant = value
                     ↑   

----- Jumped to `src/app.gleam`

const value = 25
↑▔▔▔▔▔▔▔▔▔▔     

const my_constant = value
