compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_constant_record.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

type Wibble {
  Wibble(Int)
}

const wibble = Wibble(10)
                   ↑     

----- Jumped to `src/app.gleam`

type Wibble {
  Wibble(Int)
  ↑▔▔▔▔▔▔▔▔▔▔
}

const wibble = Wibble(10)
