compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_deep_type_in_module.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
---------- Jumping from: 

import example_module
fn make_var() -> example_module.Wabble(example_module.Wibble(example_module.Wobble)) {
                                                                             ↑        
  example_module.Wabble(example_module.Wibble(example_module.Wobble(1)))
}

---------- Jumped to:

pub type Wobble {
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔  
  Wobble(Int)
}

pub type Wibble(a) {
  Wibble(a)
}

pub type Wabble(a) {
  Wabble(a)
}
