compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_from_alternative_pattern.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

type Wibble {
  Wibble
  Wobble
}

fn warble(wibble: Wibble) {
  case wibble {
    Wibble | Wobble -> 0
             ↑          
  }
}

----- Jumped to `src/app.gleam`

type Wibble {
  Wibble
  Wobble
  ↑▔▔▔▔▔
}

fn warble(wibble: Wibble) {
  case wibble {
    Wibble | Wobble -> 0
  }
}
