compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_from_anonymous_function.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

pub type Wibble

pub fn main() {
  let anonymous = fn(w: Wibble) { todo }
                         ↑              
}

----- Jumped to `src/app.gleam`

pub type Wibble
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn main() {
  let anonymous = fn(w: Wibble) { todo }
}
