compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_import.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
---------- Jumping from: 

import example_module
           ↑         
fn main() {
  example_module.my_num
}

---------- Jumped to:
pub const my_num = 1
↑
