compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_import_aliased.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
---------- Jumping from: 

import example_module as example
                          ↑     
fn main() {
  example.my_num
}

---------- Jumped to:
pub const my_num = 1
↑
