compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_import_unqualified_type.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
---------- Jumping from: 

import example_module.{type MyType}
                              ↑    
fn main() -> MyType {
  0
}

---------- Jumped to:
pub type MyType = Int
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
